# HH_project

./: README.md  pyproject.toml
src/: filtered_vacancies.json  hhabc.py  main.py  vacancyHh.py
tests/: test_vacancyHh.py
