[tool.poetry]
name = "hh-project"
version = "0.1.0"
description = ""
authors = ["DarkhanDaurenov <takishevdarkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
